--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: M.B (kalitoshka@ya.ru) -->
 <html>
   <head>
+	<link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hello, World!</h1>
